# resdata2

./: .dockerignore  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: frontend-tests.yml
backend/: API_server.py  data_handle.py  datastructure.py  interface.py  jupyter_driver.py  requirements.txt  requirements2.txt  run_server.sh  security.py  setup.sh  testing.py  testing_interface.py
backend/app/: datastructure.py
backend/python-backend/: API_server.py  package-lock.json  requirements.txt
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/public/: index.html
frontend/src/: app.d.ts  main.ts  routes.js
frontend/src/components/: ApiKeys.svelte  DataBrowser.svelte  DataSummary.svelte  LicenseManagement.svelte  TopBar.svelte  UserDetails.svelte
frontend/src/pages/: About.svelte  Documentation.svelte  Home.svelte  Login.svelte  Profile.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  FullWidthImage.svelte  __layout.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/blog/: +page.svelte
frontend/src/routes/blog/[slug]/: +page.svelte
frontend/src/routes/contact/: +page.svelte
my-react-app/: package-lock.json
resdata-client/: CMakeLists.txt
resdata-client/include/: resdata_client.h
resdata-client/src/: main.cpp  resdata_client.cpp
scripts/: deployBackend.sh  setup_structure.sh
